--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "megajs": "^1.1.0",
     "vm": "^0.1.0",
     "qrcode-terminal": "^0.12.0",
-    "wa-sticker-formatter": "^4.3.2"
+    "wa-sticker-formatter": "^4.3.2",
+    "@blackamda/telegram-image-url": "^1.0.0",
+    "wikipedia":"2.1.2"
   }
 }
