--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "qrcode-terminal": "^0.12.0",
     "wa-sticker-formatter": "^4.3.2",
     "@blackamda/telegram-image-url": "^1.0.0",
-    "wikipedia":"2.1.2"
+    "wikipedia":"2.1.2",
+    "yt-search": "2.11.1",
+    "google-tts-api":"2.0.2"
   }
 }
